WHAT IS NEW?

December ?? 2015 [Callipygous]

  * New Features
    * Ported to Android phones and tablets, as well as specific support
      for the OUYA, Gamestick and FireTV Android-based consoles!
      New "Platform-specific options" menu in General Game Data.
      See http://rpg.hamsterrepublic.com/ohrrpgce/Making_Android_games
      for information about how to port your game. You can't yet use
      the Distribute Game menu for Android. [James, Ralph]
    * While placing doors in the map editor you can now specify door
      number, and jump to existing door locations [Ralph]
    * When buying equipment in a shop, show stat bonuses [James]
    * When hiring heroes in a shop, show hero portraits [James]
    * Split "Change Box Styles", "Change User-Interface Colors" into
      two separate menus [James]
    * Split "General Preference Bitsets" and "Backwards-compatibility
      Bitsets" into two menus [Ralph]
    * Clean up orphaned temporary folders when you exit game [James]
    * Games can now optionally increase (or decrease) the number of
      save/load slots that are available. [James]
    * In the font editor you can set roughly which characters are
      icons. If you use a font with the extra Latin-1 characters
      (eg. with accents), then those letters will now show correctly in
      the .txt file when exporting textboxes.  And characters which are
      icons won't be exported as garbage in .hsi files. [Ralph]
    * Attack chains conditions can now be based on the stats of the
      targets [James]
    * Attack bitset "Never trigger elemental counterattack" [James]
    * The map editor's Clone tool now has separate 'merge' and 'replace'
      modes (Ctrl+M to toggle) [Ralph]
    * When adding a new map layer you may copy an existing one [Ralph]
    * When importing an 8-bit backdrop or tileset (eg. exported from
      another game) color 0 (transparency) is preserved; when importing